<resources>
    <string name="app_name">EyeInTheSky</string>
    <string name="start">START</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="end">End</string>
    <string name="gps">GPS</string>
    <string name="coords">Coords</string>
    <string name="accuracy">Accuracy</string>
    <string name="altitude">Altitude</string>
    <string name="velocity">Velocity</string>
    <string name="bearing">Bearing</string>
    <string name="WP">WP:</string>
    <string name="distance_to">Distance TO</string>
    <string name="bearing_to">Bearing To</string>
    <string name="title_activity_map_settings_new">Map</string>
    <string name="select_area">Select Area</string>
    <string name="point_a">Point A</string>
    <string name="point_b">Point B</string>
    <string name="point_c">Point C</string>
    <string name="clear">Clear</string>
    <string name="ok">OK</string>
    <string name="yaw">Yaw</string>
    <string name="roll">Roll</string>
    <string name="pitch">Pitch</string>
    <string name="name">Name</string>
    <string name="resolution">Resolution</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="chip_size">Chip size</string>
    <string name="lens">Lens</string>
    <string name="focal_len">Focal len.</string>
    <string name="shutter">Shutter</string>
    <string name="url">URL</string>
    <string name="point_a_com">Point A\'</string>
    <string name="point_b_com">Point B\'</string>
    <string name="compute">Compute</string>
    <string name="camera">Camera</string>
    <string name="area">Area</string>
    <string name="flight">Flight</string>
    <string name="calibration">Calibration</string>
    <string name="calibrate">Calibrate</string>
    <string name="show">Show</string>
    <string name="wp">WP</string>
    <string name="next"><![CDATA[>>]]></string>
    <string name="prev"><![CDATA[<<]]></string>
    <string name="gsd_or_altitude">Select GSD or altitude:</string>
    <string name="gsd">GSD</string>
    <string name="prefered_vector">Preferred vector:</string>
    <string name="v1">V1</string>
    <string name="v2">V2</string>
    <string name="v3">V3</string>
    <string name="v4">V4</string>
    <string name="overlap">Overlap</string>
    <string name="longitudinal">Longitudinal</string>
    <string name="lateral">Lateral</string>
    <string name="tolerance">Tolerance</string>
    <string name="angle">Angle</string>
    <string name="distance">Distance</string>
</resources>
