<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraSettingsActivity">

    <Button
        android:id="@+id/btn_save"
        android:layout_width="256dp"
        android:layout_height="64dp"
        android:layout_marginBottom="32dp"
        android:text="@string/save"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txv_name"
        android:layout_width="128dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txb_camera_name"
        android:layout_width="272dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/txv_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txv_camera_resolution"
        android:layout_width="128dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/resolution"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_name" />

    <EditText
        android:id="@+id/txb_camera_resolution_horizontal"
        android:layout_width="128dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/horizontal"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/txv_camera_resolution"
        app:layout_constraintTop_toBottomOf="@+id/txb_camera_name" />

    <EditText
        android:id="@+id/txb_camera_resolution_vertical"
        android:layout_width="128dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/vertical"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/txb_camera_resolution_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/txb_camera_name" />

    <TextView
        android:id="@+id/txv_chip_size"
        android:layout_width="128dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/chip_size"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_camera_resolution" />

    <EditText
        android:id="@+id/txb_chip_size_horizontal"
        android:layout_width="128dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/horizontal"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/txv_chip_size"
        app:layout_constraintTop_toBottomOf="@+id/txb_camera_resolution_horizontal" />

    <EditText
        android:id="@+id/txb_chip_size_vertical"
        android:layout_width="128dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/vertical"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/txb_chip_size_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/txb_camera_resolution_vertical" />

    <TextView
        android:id="@+id/txv_camera_focal_length"
        android:layout_width="128dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/lens"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_chip_size" />

    <EditText
        android:id="@+id/txb_camera_focal_length"
        android:layout_width="128dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/focal_len"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/txv_camera_focal_length"
        app:layout_constraintTop_toBottomOf="@+id/txb_chip_size_horizontal" />

    <TextView
        android:id="@+id/txv_camera_shutter"
        android:layout_width="128dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/shutter"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_camera_focal_length" />

    <EditText
        android:id="@+id/txb_camera_shutter"
        android:layout_width="272dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/url"
        android:inputType="textUri"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/txv_camera_shutter"
        app:layout_constraintTop_toBottomOf="@+id/txb_camera_focal_length" />

</android.support.constraint.ConstraintLayout>